--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "expo lint",
+    "format": "prettier --write \"src/**/*.+(ts|tsx|json|md)\"",
+    "format:check": "prettier --check \"src/**/*.+(ts|tsx|json|md)\""
   },
   "dependencies": {
     "expo": "~51.0.22",
@@ -17,7 +20,12 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.1.3",
+    "eslint-config-expo": "^7.0.0"
   },
   "private": true
 }
